--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "adform",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://dimik.github.io/adform",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/pickers": "^3.2.4",
+    "clsx": "^1.0.4",
+    "date-fns": "^2.0.1",
+    "dexie": "^2.0.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "validate.js": "^0.13.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1",
+    "random-words": "^1.1.0"
   }
 }
