--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://dimik.github.io/adform",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dimik/adform.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.4",
     "clsx": "^1.0.4",
     "date-fns": "^2.0.1",
@@ -44,7 +50,10 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "gh-pages": "^2.1.1",
-    "random-words": "^1.1.0"
+    "random-words": "^1.1.0",
+    "react-test-renderer": "^16.9.0"
   }
 }
