--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.0.4",
     "date-fns": "^2.0.1",
     "dexie": "^2.0.4",
+    "keymirror": "^0.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
